Broke out parts into separate files; fixed some content; separated out masc/fem nouns

--- a/gnfrench.tex
+++ b/gnfrench.tex
@@ -25,7 +25,10 @@
 \begin{multicols*}{5}
 \section{Vocabulary}
 
-\input{words.tex}
+\input{general}
+\input{nouns}
+\input{verbs}
+\input{qualities}
 \input{subjonctif}
 
 \end{multicols*}
