--- a/subjonctif/sub_indicatif.tex
+++ b/subjonctif/sub_indicatif.tex
@@ -1,10 +1,23 @@
 \subsection*{Indicatif / subjontif negatif}
+\fr  {alors que}{}   {while}
 \fr  {constater que}{}   {to observe that}
 \fr  {croire que}{}   {to believe that}
+\fr  {depuis que}{}   {since}
+\fr  {dès que}{}   {as soon as}
 \fr  {espérer que}{}   {to hope that}
 \fr  {estimer que}{}   {to consider that}
-\fr  {être certain que/être sûr que}{}   {to be sure that}
+\fr  {imaginer que}{}   {to imagine that}
 \fr  {pendent que}{}   {while}
 \fr  {penser que}{}   {to think that}
+\fr  {savoir que}{}   {to know that}
+\fr  {tandis que}{}   {while}
 \fr  {trouver que}{}   {to find that}
+\fr  {étant donne que}{}   {given that}
+     {\bf {\em il est}\ldots}\\
+     \fr  {\ldots certain que}{}   {it is certain that}
+     \fr  {\ldots évident  que}{}   {it is evident that}
+     \fr  {\ldots sûr  que}{}   {it is sure that}
+     \fr  {\ldots vrai  que}{}   {it is true that}
+
+
 
