--- a/subjonctif/sub_sentiment.tex
+++ b/subjonctif/sub_sentiment.tex
@@ -4,24 +4,26 @@
 \fr  {avoir la chance que}{}   {to have the chance that}
 \fr  {avoir peur que}{}   {to fear that}
 \fr  {craindre que}{}   {to fear that}
-\fr  {il est absurde que}{}   {it is absurd that}
-\fr  {il est attristant que}{}   {it is sad that}
-\fr  {il est drôle que}{}   {it is funny that}
-\fr  {il est ennuyeux que}{}   {it is annoying that}
-\fr  {il est epouvantable que}{}   {it is dreadful that}
-\fr  {il est etonnant que}{}   {it is surprising that}
-\fr  {il est etrange que}{}   {it is strange that}
-\fr  {il est extrodinaire que}{}   {it is amazing that}
-\fr  {il est inaccaptable que}{}   {it is innacceptable that}
-\fr  {il est in/juste que}{}   {it is in/just that}
-\fr  {il est normal que}{}   {it is normal that}
-\fr  {il est raisinnable}{}   {it is reasonable that}
-\fr  {il est regretable que}{}   {it is regretable that}
-\fr  {il est redicule que}{}   {it is ridiculous that}
-\fr  {il est terrible que}{}   {it is terrible that}
+
 \fr  {être content que}{}   {to be happy that}
 \fr  {être etonne que}{}   {to be surprised that}
 \fr  {être heureux}{}   {to be happy that}
 \fr  {être satisfait que}{}   {to be satisfied that}
 \fr  {être triste que}{}   {to be sad that}
 \fr  {regretter que}{}   {regret that}
+     {\bf {\em il est}\ldots}\\
+     \fr  {\ldots absurde que}{}   {it is absurd that}
+     \fr  {\ldots attristant que}{}   {it is sad that}
+     \fr  {\ldots drôle que}{}   {it is funny that}
+     \fr  {\ldots ennuyeux que}{}   {it is annoying that}
+     \fr  {\ldots epouvantable que}{}   {it is dreadful that}
+     \fr  {\ldots etonnant que}{}   {it is surprising that}
+     \fr  {\ldots etrange que}{}   {it is strange that}
+     \fr  {\ldots extrodinaire que}{}   {it is amazing that}
+     \fr  {\ldots inaccaptable que}{}   {it is innacceptable that}
+     \fr  {\ldots in/juste que}{}   {it is in/just that}
+     \fr  {\ldots normal que}{}   {it is normal that}
+     \fr  {\ldots raisinnable}{}   {it is reasonable that}
+     \fr  {\ldots regretable que}{}   {it is regretable that}
+     \fr  {\ldots redicule que}{}   {it is ridiculous that}
+     \fr  {\ldots terrible que}{}   {it is terrible that}
