Sorted some sections

--- a/nouns.tex
+++ b/nouns.tex
@@ -87,6 +87,7 @@
 \fr  {rustine}{une}   {a patch (computer)}
 \fr  {situation}{une}   {situation}
 \fr  {structure}{une}   {structure}
+\fr  {technologie}{une}   {technology}
 \fr  {valuer éthique}{une}   {values}
 \fr  {vie personelle}{la}   {personal life}
 \fr  {vie privée}{la}   {private life}
