--- a/verbs.tex
+++ b/verbs.tex
@@ -15,11 +15,11 @@
 \fr  {conseiller}{}   {to council}
 \fr  {constater}{}   {to notice}
 \fr  {convaincre}{}   {to convince/to pursuade}
-\fr  {decrire}{}   {to describe}
-\fr  {demontrer}{}   {to prove/to demonstrate}
-\fr  {elaborer}{}   {to work out/to develop}
+\fr  {décrire}{}   {to describe}
+\fr  {démontrer}{}   {to prove/to demonstrate}
+\fr  {élaborer}{}   {to work out/to develop}
 \fr  {empirer}{}   {to worsen}
-\fr  {enchainer}{}   {to link}
+\fr  {enchaîner}{}   {to link}
 \fr  {engager}{}   {to hire/to commit/to take on}
 \fr  {exiger}{}   {to demand}
 \fr  {faire connaisance}{}   {mmm}
@@ -29,7 +29,7 @@
 \fr  {influencer}{}   {to influence}
 \fr  {limiter}{}   {to limit}
 \fr  {menacer}{}   {to threaten}
-\fr  {mentioner}{}   {to mention}
+\fr  {mentionner}{}   {to mention}
 \fr  {mobiliser}{}   {to mobilise/to rally}
 \fr  {motiver}{}   {to motivate}
 \fr  {navigateur}{}   {web browser}
@@ -44,8 +44,8 @@
 \fr  {rassembler}{}   {to collect/to gather}
 \fr  {rater}{}   {to fail}
 \fr  {réagir}{}   {to react}
-\fr  {recommender}{}   {recommender}
-\fr  {reconcilier}{}   {to reconcile}
+\fr  {recommander}{}   {recommender}
+\fr  {réconcilier}{}   {to reconcile}
 \fr  {redoubter}{}   {to doubt}
 \fr  {reporter}{}   {to postpone}
 \fr  {resister}{}   {to resist}
@@ -54,44 +54,59 @@
 \fr  {subir}{}   {to put up with}
 \fr  {suggerer}{}   {suggest}
 \fr  {traiter}{}   {to process/to deal with}
-     {\bf Expressions with {\em être}}\\
-     \fr  {être en enjeu}{}   {to be at stake}
-     \fr  {être responsable de}{}   {to be responsible for}
-     {\bf Expressions with {\em faire}}\\
-     \fr  {faire attention à}{}   {to pay attention to}
-     \fr  {faire confiance à quelqu’un}{}   {to trust someone}
-     \fr  {faire de son mieux}{}   {to do one’s best}
-     \fr  {faire des progrès}{}   {to make progress}
-     \fr  {faire face à}{}   {to oppose, face up to}
-     \fr  {faire partie de}{}   {to be a part of}
-     \fr  {faire preuve de}{}   {to display a quality / virtue}
-     \fr  {faire semblant de}{}   {to pretend to}
-     \fr  {faire une question}{}   {to ask a question}
-     {\bf Expressions with {\em mettre}}\\
-     \fr  {mettre accent sur}{}   {to focus on}
-     \fr  {mettre à jour}{}   {to update}
-     \fr  {mettre à l'essai}{}   {to put to the test}
-     \fr  {mettre à pied}{}   {to layoff/to fire}
-     \fr  {mettre au point}{}   {to fine-tune / to adjust}
-     \fr  {mettre aux norme}{} {to updatw/upgradw to standards}
-     \fr  {mettre en colère}{}   {to make angry}
-     \fr  {mettre en contact}{}   {to put in touch}
-     \fr  {mettre en desordre}{}   {to mess up}
-     \fr  {mettre en marche}{}   {to get something started}
-     \fr  {mettre en oeuvre}{}   {to implement}
-     \fr  {mettre en relief}{}   {to accentuate}
-     \fr  {mettre en service}{}   {to put into service}
-     \fr  {mettre en train}{}   {to get something underway}
-     \fr  {mettre fin à quelque chose}{}   {to put an end to something}
-     \fr  {mettre sur pied}{}   {to organize}
-     {\bf Expressions with {\em prendre}}\\
-     \fr  {prendre à gauche / droite}{}   {to turn left / right}
-     \fr  {prendre à}{se}   {to start doing}
-     \fr  {prendre au sérieux}{}   {to take seriously}
-     \fr  {prendre des gants}{}   {to handle with kid gloves / to handle carefully}
-     \fr  {prendre des risques}{}   {to take chances}
-     \fr  {prendre fin}{}   {to come to an end}
-     \fr  {prendre garde}{}   {to be careful}
-     \fr  {prendre rendez-vous avec}{}   {to make an appointment with}
-     \fr  {prendre sa retraite}{}   {to retire (from work)}
-     \fr  {prendre une décision}{}   {to make a decision}
+
+{\bf Expressions with {\em être}}\\
+\fr  {être en enjeu}{}   {to be at stake}
+\fr  {être responsable de}{}   {to be responsible for}
+\fr  {être à l’heure}{}   {to be on time}
+\fr  {être au courant}{}   {to be informed, aware}
+
+{\bf Expressions with {\em avoir}}\\
+\fr  {avoir l’air}{}   {to appear to}
+\fr  {avoir la chance de}{}   {to be lucky to}
+\fr  {avoir envie}{}   {to feel like}
+\fr  {avoir l’habitude de}{}   {to be accustomed to}
+\fr  {avoir l’intention de}{}   {to intend to}
+\fr  {avoir raison}{}   {to be right}
+\fr  {avoir tort}{}   {to be wrong}
+
+{\bf Expressions with {\em faire}}\\
+\fr  {faire attention à}{}   {to pay attention to}
+\fr  {faire confiance à quelqu’un}{}   {to trust someone}
+\fr  {faire de son mieux}{}   {to do one’s best} 
+\fr  {faire des progrès}{}   {to make progress}
+\fr  {faire face à}{}   {to oppose, face up to}
+\fr  {faire partie de}{}   {to be a part of}
+\fr  {faire preuve de}{}   {to display a quality / virtue}
+\fr  {faire semblant de}{}   {to pretend to}
+\fr  {faire une question}{}   {to ask a question}
+
+{\bf Expressions with {\em mettre}}\\
+\fr  {mettre accent sur}{}   {to focus on}
+\fr  {mettre à jour}{}   {to update}
+\fr  {mettre à l'essai}{}   {to put to the test}
+\fr  {mettre à pied}{}   {to layoff/to fire}
+\fr  {mettre au point}{}   {to fine-tune / to adjust}
+\fr  {mettre aux norme}{} {to updatw/upgradw to standards}
+\fr  {mettre en colère}{}   {to make angry}
+\fr  {mettre en contact}{}   {to put in touch}
+\fr  {mettre en desordre}{}   {to mess up}
+\fr  {mettre en marche}{}   {to get something started}
+\fr  {mettre en oeuvre}{}   {to implement}
+\fr  {mettre en relief}{}   {to accentuate}
+\fr  {mettre en service}{}   {to put into service}
+\fr  {mettre en train}{}   {to get something underway}
+\fr  {mettre fin à quelque chose}{}   {to put an end to something}
+\fr  {mettre sur pied}{}   {to organize}
+
+{\bf Expressions with {\em prendre}}\\
+\fr  {prendre à gauche / droite}{}   {to turn left / right}
+\fr  {prendre à}{se}   {to start doing}
+\fr  {prendre au sérieux}{}   {to take seriously}
+\fr  {prendre des gants}{}   {to handle with kid gloves / to handle carefully}
+\fr  {prendre des risques}{}   {to take chances}
+\fr  {prendre fin}{}   {to come to an end}
+\fr  {prendre garde}{}   {to be careful}
+\fr  {prendre rendez-vous avec}{}   {to make an appointment with}
+\fr  {prendre sa retraite}{}   {to retire (from work)}
+\fr  {prendre une décision}{}   {to make a decision}
