Cleaned up; added some new words; verbs now general and work

--- a/def.tex
+++ b/def.tex
@@ -27,6 +27,11 @@ Glen Newton pp.\thepage ~ \today
                                 {.2ex}%x
                                 {\sffamily\bfseries}}
 
+\renewcommand{\subsubsection}{\@startsection{subsubsection}{1}{0mm}%
+                                {.1ex}%
+                                {.1ex}%x
+                                {\sffamily\bfseries}}
+
 
 
 \def\multi@column@out{%
