--- a/general.tex
+++ b/general.tex
@@ -1,4 +1,4 @@
-\subsection*{General}
+\section{General}
 \fr  {à la fois/en meme temp}{}   {at the same time}
 \fr  {allé-retour}{}   {back-and-forth}
 \fr  {arbitraire}{}   {arbitrary}
@@ -9,5 +9,8 @@
 \fr  {même si}{}   {even if}
 \fr  {parmi}{}   {among}
 \fr  {plusieurs}{}   {several}
+\fr  {plutôt}{}{instead}
 \fr  {quelque}{}   {some}
 \fr  {vecu}{}{real}
+
+
