--- a/qualities.tex
+++ b/qualities.tex
@@ -1,4 +1,4 @@
-\subsection*{Qualities}
+\section{Qualities}
 \fr  {consciencieux}{}   {conscientious}
 \fr  {exigeant}{}   {demanding}
 \fr  {fiable}{}   {reliable}
