--- a/subjonctif/sub_possibilite.tex
+++ b/subjonctif/sub_possibilite.tex
@@ -1,7 +1,6 @@
 
-\subsection*{**Verbes de possibilité}
+\subsection*{Verbes de possibilité}
 \fr  {il arrive que} { }   {mmm}
-\fr  {motivation}{la}   {motivation}
 \fr  {il est possible que}{ }   {it is possible that}
 \fr  {il est probable que}{ }   {it is probable that}
 \fr  {il semble que}{ }   {it seems that}
