--- a/subjonctif/sub_sentiment.tex
+++ b/subjonctif/sub_sentiment.tex
@@ -5,11 +5,12 @@
 \fr  {avoir peur que}{}   {to fear that}
 \fr  {craindre que}{}   {to fear that}
 
-\fr  {être content que}{}   {to be happy that}
-\fr  {être etonne que}{}   {to be surprised that}
-\fr  {être heureux}{}   {to be happy that}
-\fr  {être satisfait que}{}   {to be satisfied that}
-\fr  {être triste que}{}   {to be sad that}
+être\ldots\\
+\fr  {\ldots content que}{}   {to be happy that}
+\fr  {\ldots etonné que}{}   {to be surprised that}
+\fr  {\ldots heureux}{}   {to be happy that}
+\fr  {\ldots satisfait que}{}   {to be satisfied that}
+\fr  {\ldots triste que}{}   {to be sad that}
 \fr  {regretter que}{}   {regret that}
      {\bf {\em il est}\ldots}\\
      \fr  {\ldots absurde que}{}   {it is absurd that}
