--- a/verbs.tex
+++ b/verbs.tex
@@ -1,11 +1,7 @@
-\subsection*{Verbs}
-\fr  {empecher}{}   {to prevent}
+\section{Verbs}
 \fr  {aborder}{}   {to approach}
-\fr  {repenser}{}   {to revise}
-\fr  {adapter}{s'}   {to adapt}
-\fr  {\hspace*{2mm}\ldots à la nouvelle situation}{ }   {to the new situation}
-\fr  {\hspace*{2mm}\ldots au changement}{}   {to change}
 \fr  {acquerir}{}   {to acquire}
+\fr  {adapter}{s'}   {to adapt}
 \fr  {assurer} {s'}   {to make sure}
 \fr  {assurer}{}   {to assure}
 \fr  {chiffrer}{}   {to encrypt}
@@ -18,6 +14,7 @@
 \fr  {décrire}{}   {to describe}
 \fr  {démontrer}{}   {to prove/to demonstrate}
 \fr  {élaborer}{}   {to work out/to develop}
+\fr  {empecher}{}   {to prevent}
 \fr  {empirer}{}   {to worsen}
 \fr  {enchaîner}{}   {to link}
 \fr  {engager}{}   {to hire/to commit/to take on}
@@ -32,7 +29,6 @@
 \fr  {mentionner}{}   {to mention}
 \fr  {mobiliser}{}   {to mobilise/to rally}
 \fr  {motiver}{}   {to motivate}
-\fr  {navigateur}{}   {web browser}
 \fr  {observer}{}   {to observe}
 \fr  {occuper}{s'}   {to be busy/to take care of something}
 \fr  {occuper (un poste)}{}   {occupy (a job)}
@@ -47,6 +43,7 @@
 \fr  {recommander}{}   {recommender}
 \fr  {réconcilier}{}   {to reconcile}
 \fr  {redoubter}{}   {to doubt}
+\fr  {repenser}{}   {to revise}
 \fr  {reporter}{}   {to postpone}
 \fr  {resister}{}   {to resist}
 \fr  {ressember a}{}   {to resemble}
@@ -54,59 +51,57 @@
 \fr  {subir}{}   {to put up with}
 \fr  {suggerer}{}   {suggest}
 \fr  {traiter}{}   {to process/to deal with}
-
-{\bf Expressions with {\em être}}\\
-\fr  {être en enjeu}{}   {to be at stake}
-\fr  {être responsable de}{}   {to be responsible for}
+\subsection*{Expressions with {\em être}}
 \fr  {être à l’heure}{}   {to be on time}
 \fr  {être au courant}{}   {to be informed, aware}
-
-{\bf Expressions with {\em avoir}}\\
-\fr  {avoir l’air}{}   {to appear to}
-\fr  {avoir la chance de}{}   {to be lucky to}
-\fr  {avoir envie}{}   {to feel like}
-\fr  {avoir l’habitude de}{}   {to be accustomed to}
-\fr  {avoir l’intention de}{}   {to intend to}
-\fr  {avoir raison}{}   {to be right}
-\fr  {avoir tort}{}   {to be wrong}
-
-{\bf Expressions with {\em faire}}\\
-\fr  {faire attention à}{}   {to pay attention to}
-\fr  {faire confiance à quelqu’un}{}   {to trust someone}
-\fr  {faire de son mieux}{}   {to do one’s best} 
-\fr  {faire des progrès}{}   {to make progress}
-\fr  {faire face à}{}   {to oppose, face up to}
-\fr  {faire partie de}{}   {to be a part of}
-\fr  {faire preuve de}{}   {to display a quality / virtue}
-\fr  {faire semblant de}{}   {to pretend to}
-\fr  {faire une question}{}   {to ask a question}
-
-{\bf Expressions with {\em mettre}}\\
-\fr  {mettre accent sur}{}   {to focus on}
-\fr  {mettre à jour}{}   {to update}
-\fr  {mettre à l'essai}{}   {to put to the test}
-\fr  {mettre à pied}{}   {to layoff/to fire}
-\fr  {mettre au point}{}   {to fine-tune / to adjust}
-\fr  {mettre aux norme}{} {to updatw/upgradw to standards}
-\fr  {mettre en colère}{}   {to make angry}
-\fr  {mettre en contact}{}   {to put in touch}
-\fr  {mettre en desordre}{}   {to mess up}
-\fr  {mettre en marche}{}   {to get something started}
-\fr  {mettre en oeuvre}{}   {to implement}
-\fr  {mettre en relief}{}   {to accentuate}
-\fr  {mettre en service}{}   {to put into service}
-\fr  {mettre en train}{}   {to get something underway}
-\fr  {mettre fin à quelque chose}{}   {to put an end to something}
-\fr  {mettre sur pied}{}   {to organize}
-
-{\bf Expressions with {\em prendre}}\\
-\fr  {prendre à gauche / droite}{}   {to turn left / right}
+\fr  {être en enjeu}{}   {to be at stake}
+\fr  {être responsable de}{}   {to be responsible for}
+{\sffamily\bfseries Expressions with {\em avoir}}\\
+\fr  {air}{avoir l’}   {to appear to}
+\fr  {chance de}{avoir la}   {to be lucky to}
+\fr  {envie}{avoir}   {to feel like}
+\fr  {habitude de}{avoir l’}   {to be accustomed to}
+\fr  {intention de}{avoir l’}   {to intend to}
+\fr  {raison}{avoir}   {to be right}
+\fr  {tort}{avoir}   {to be wrong}
+{\sffamily\bfseries Expressions with {\em faire}}\\
+\fr  {attention à}{faire}   {to pay attention to}
+\fr  {avancer \small qqch}{faire}   {to something move forward}
+\fr  {confiance à quelqu’un}{faire}   {to trust someone}
+\fr  {face à}{faire}   {to oppose, face up to}
+\fr  {mieux}{faire de son}   {to do one’s best} 
+\fr  {partie de}{faire}   {to be a part of}
+\fr  {preuve de}{faire}   {to display a quality / virtue}
+\fr  {progrès}{faire des}   {to make progress}
+\fr  {résautage}{faire du}   {to network}
+\fr  {semblant de}{faire}   {to pretend to}
+\fr  {une question}{faire}   {to ask a question}
+{\sffamily\bfseries Expressions with {\em mettre}}\\
+\fr  {accent sûr}{mettre}   {to focus on}
+\fr  {colère}{mettre en}   {to make angry}
+\fr  {contact}{mettre en}   {to put in touch}
+\fr  {desordre}{mettre en}   {to mess up}
+\fr  {doute}{mettre en}   {to put in doubt}
+\fr  {essai}{mettre à l'}   {to put to the test}
+\fr  {evidence}{mettre en}   {to highlight}
+\fr  {fin à quelque chose}{mettre}   {to put an end to something}
+\fr  {jour}{mettre à}   {to update}
+\fr  {marche}{mettre en}   {to get something started}
+\fr  {norme}{mettre aux} {to update/upgrade to standards}
+\fr  {oeuvre}{mettre en}   {to implement}
+\fr  {pied}{mettre à}   {to layoff/to fire}
+\fr  {pied}{mettre sur}   {to organize}
+\fr  {point}{mettre au}   {to fine-tune / to adjust}
+\fr  {relief}{mettre en}   {to accentuate}
+\fr  {service}{mettre en}   {to put into service}
+\fr  {train}{mettre en}   {to get something underway}
+{\sffamily\bfseries Expressions with {\em prendre}}\\
+\fr  {décision}{prendre la}   {to make a decision}
+\fr  {fin}{prendre}   {to come to an end}
+\fr  {gants}{prendre des}   {to handle carefully}
+\fr  {garde}{prendre}   {to be careful}
+\fr  {gauche / droite}{prendre à}   {to turn left / right}
 \fr  {prendre à}{se}   {to start doing}
-\fr  {prendre au sérieux}{}   {to take seriously}
-\fr  {prendre des gants}{}   {to handle with kid gloves / to handle carefully}
-\fr  {prendre des risques}{}   {to take chances}
-\fr  {prendre fin}{}   {to come to an end}
-\fr  {prendre garde}{}   {to be careful}
-\fr  {prendre rendez-vous avec}{}   {to make an appointment with}
-\fr  {prendre sa retraite}{}   {to retire (from work)}
-\fr  {prendre une décision}{}   {to make a decision}
+\fr  {risques}{prendre des}   {to take chances}
+\fr  {sa retraite}{prendre}   {to retire (from work)}
+\fr  {sérieux}{prendre au}   {to take seriously}
