--- a/nouns.tex
+++ b/nouns.tex
@@ -1,97 +1,95 @@
+\section*{Nouns}
 \subsection*{Masculine nouns}
-\fr  {accomplissement}{un}   {completion (of a task)}
-\fr  {bias}{le}   {bias}
-\fr  {cheminement de carrière}{un}   {career path}
-\fr  {chiffrement}{un}   {encryption}
-\fr  {comportment}{un}   {behaviour}
-\fr  {contracteur}{un}   {contractor}
-\fr  {correctif securite}{un}   {security update (computer)}
+\subsubsection*{General}
 \fr  {debrayage}{un}   {a stoppage}
 \fr  {discours haineux}{un}   {hate speech}
-\fr  {dossier}{un}   {the file}
-\fr  {echec}{un}   {a failure}
-\fr  {embauche}{un}   {a hiring/an employment}
-\fr  {enjeu}{un}   {stake/issue/problem}
-\fr  {epuisement professionel}{un} {burnout}
-\fr  {exigence}{un}   {a demand}
-\fr  {indice}{un}   {sign/clue/indicator}
-\fr  {jalon}{un}   {milestone}
-\fr  {ordre du jour}{un}   {agenda}
-\fr  {plan de relève}{un}   {succession planning}
-\fr  {post vacant}{un}   {empty position}
-\fr  {programme d'aide d'employées}{un}   {employee assistance program}
-\fr  {programme}{un}   {program}
-\fr  {rendement}{le}   {productivity/output}
-\fr  {roulement du personelle}{le}   {turnover (employees)}
-\fr  {substantif}{un}   {substantive}
-\fr  {systeme}{un}   {the system}
-\fr  {temp prescrits}{un}   {window of time}
-\fr  {temps partiel}{à}   {part-time}
-\fr  {télétravail}{le}   {telecommuting}
 \fr  {écart}{un}   {a difference}
 \fr  {échange}{un}   {an exchange}
+\fr  {echec}{un}   {a failure}
+\fr  {enjeu}{un}   {stake/issue/problem}
+\fr  {epuisement professionel}{un} {burnout}
 \fr  {événement}{un}   {event}
-
-
-
-
-
-
-
-
+\fr  {exigence}{un}   {a demand}
+\fr  {indice}{un}   {sign/clue/indicator}
+\fr  {navigateur}{le}   {web browser}
+\fr  {programme}{un}   {program}
+\subsubsection*{Work words}
+\fr  {accomplissement}{l'}   {completion (of a task)}
+\fr  {bias}{le}   {bias}
+\fr  {cheminement de carrière}{le}   {career path}
+\fr  {chiffrement}{le}   {encryption}
+\fr  {comportment}{le}   {behaviour}
+\fr  {contracteur}{le}   {contractor}
+\fr  {correctif securite}{le}   {security update (computer)}
 \fr  {direction}{}   {director general}
 \fr  {direction generale}{}   {branch}
 \fr  {dirigeant principal de l'information: DPI}{}   {chief information officer: CIO}
 \fr  {division}{}   {directorate}
-
+\fr  {dossier}{le}   {the file}
+\fr  {embauche}{le}   {a hiring/an employment}
+\fr  {jalon}{le}   {milestone}
+\fr  {ordre du jour}{l'}   {agenda}
+\fr  {partie prenante}{le}   {stakeholder}
+\fr  {plan de relève}{le}   {succession planning}
+\fr  {post vacant}{le}   {empty position}
+\fr  {programme d'aide d'employées}{le}   {employee assistance program}
+\fr  {rendement}{le}   {productivity/output}
+\fr  {roulement du personelle}{le}   {turnover (employees)}
+\fr  {substantif}{le}   {substantive}
+\fr  {systeme}{le}   {the system}
+\fr  {télétravail}{le}   {telecommuting}
+\fr  {temp prescrits}{le}   {window of time}
+\fr  {temps partiel}{à}   {part-time}
 \subsection*{Feminine nouns}
-\fr  {acquisition}{une}   {procurement}
-\fr  {affectation}{une}   {assignment}
-\fr  {attente}{une}   {expectation}
-\fr  {attente}{une}   {expectation}
+\subsubsection*{General}
+\fr  {attente}{l'}   {expectation}
 \fr  {betise}{la}   {foolishness}
-\fr  {competance}{une}   {skill/ability}
-\fr  {consequence}{une}   {consequence}
-\fr  {convention collectif}{une}   {collective agreement}
-\fr  {date d'écheance}{une}   {expiry date}
-\fr  {décision}{une}   {a decision}
-\fr  {démarche}{une}   {an approach/method}
-\fr  {dépendence}{une}   {addiction}
-\fr  {détachment}{une}   {secondment}
-\fr  {faire confiance à}{}   {to have confidence in}
-\fr  {gestions des talents}{}   {talent management}
+\fr  {décision}{la}   {a decision}
+\fr  {démarche}{la}   {an approach/method}
+\fr  {dépendence}{la}   {addiction}
+\fr  {envergure}{l'}   {scale, scope}
 \fr  {haine}{la}   {hatred}
-\fr  {heures compressé}{les}   {compressed work hours}
-\fr  {heurs supplementaire (f)}{}   {overtime}
 \fr  {hâte}{la}   {haste}
-\fr  {information}{une}   {information}
-\fr  {informatique en nuage}{}   {cloud computing}
-\fr  {instance}{une}   {the authority}
-\fr  {integrité}{une}   {integrity}
+\fr  {information}{l'}   {information}
 \fr  {liberté d'expression}{la}   {freedom of expression}
-\fr  {menace}{une}   {a threat}
-\fr  {motivation}{une}   {motivation}
-\fr  {mutation}{une}   {deployment}
-\fr  {occasion}{une}   {opportunity/chance}
-\fr  {par interim}{}   {acting}
-\fr  {partie prenante}{un}   {stakeholder}
-\fr  {pente glissante}{une}   {unsteady/shaky ground}
+\fr  {menace}{la}   {a threat}
+\fr  {motivation}{la}   {motivation}
+\fr  {pente glissante}{la}   {unsteady/shaky ground}
 \fr  {period}{la}   {the period}
 \fr  {plupart}{la}   {the majority}
+\fr  {salubrité}{la}   {cleanliness}
+\fr  {situation}{la}   {situation}
+\fr  {structure}{la}   {structure}
+\fr  {revue}{la}   {journal (scientific)}
+\subsubsection*{Work words}
+\fr  {acquisition}{l'}   {procurement}
+\fr  {affectation}{l'}   {assignment}
+\fr  {competance}{la}   {skill/ability}
+\fr  {consequence}{la}   {consequence}
+\fr  {convention collectif}{la}   {collective agreement}
+\fr  {date d'écheance}{la}   {expiry date}
+\fr  {détachment}{la}   {secondment}
+\fr  {ébouche}{l'}   {a draft}
+\fr  {êmpechement}{l'}   {an obstacle}
+\fr  {équipe}{l'}   {team}
+\fr  {équip special}{l'}   {tiger team}
+\fr  {gestions des talents}{}   {talent management}
+\fr  {heures compressé}{les}   {compressed work hours}
+\fr  {heurs supplementaire (f)}{}   {overtime}
+\fr  {informatique en nuage}{}   {cloud computing}
+\fr  {instance}{l'}   {the authority}
+\fr  {integrité}{l'}   {integrity}
+\fr  {motivation}{la}   {motivation}
+\fr  {mutation}{la}   {deployment}
+\fr  {occasion}{l'}   {opportunity/chance}
+\fr  {par interim}{}   {acting}
 \fr  {prime de rendement}{la}   {bonus}
-\fr  {publicite}{une}   {advertising}
+\fr  {publicité}{la}   {advertising}
 \fr  {remue-meninges}{les}   {brainstorm}
-\fr  {repercussion}{une}   {repercussion}
-\fr  {responsabilité}{une}   {an exchange}
-\fr  {revue}{une}   {journal (scientific)}
-\fr  {rustine}{une}   {a patch (computer)}
-\fr  {situation}{une}   {situation}
-\fr  {structure}{une}   {structure}
-\fr  {technologie}{une}   {technology}
-\fr  {valuer éthique}{une}   {values}
+\fr  {repercussion}{la}   {repercussion}
+\fr  {responsabilité}{la}   {an exchange}
+\fr  {rustine}{la}   {a patch (computer)}
+\fr  {technologie}{la}   {technology}
+\fr  {valuer éthique}{la}   {values}
 \fr  {vie personelle}{la}   {personal life}
 \fr  {vie privée}{la}   {private life}
-\fr  {ébouche}{une}   {a draft}
-\fr  {équip special}{une}   {tiger team}
-\fr  {équipe}{une}   {team}
-\fr  {êmpechement}{une}   {an obstacle}
