--- a/subjonctif/sub_necessite.tex
+++ b/subjonctif/sub_necessite.tex
@@ -1,9 +1,8 @@
 \subsection*{Verbes de nécessité}
-
 il est\ldots\\
-\fr  {essential que}{}   {it is essential that}
-\fr  {important que}{}   {it is important that}
-\fr  {nécessaire que}{}   {it is necessary that}
-\fr  {obligatoire que}{}   {it is compulsory that}
-\fr  {profitable que}{}    {it is beneficial that}
-\fr  {urgent que}{}   {it is urgent that}
+\fr  {\ldots essential que}{}   {it is essential that}
+\fr  {\ldots important que}{}   {it is important that}
+\fr  {\ldots nécessaire que}{}   {it is necessary that}
+\fr  {\ldots obligatoire que}{}   {it is compulsory that}
+\fr  {\ldots profitable que}{}    {it is beneficial that}
+\fr  {\ldots urgent que}{}   {it is urgent that}
