Change format of copyright

--- a/def.tex
+++ b/def.tex
@@ -12,8 +12,8 @@ leftmargin=0mm,rightmargin=0mm,skipbelow=0mm,skipabove=0mm,
 \begin{mdframed}[style=header]
 \footnotesize
 \sffamily
-French vocabulary\\
-Glen Newton pp.\thepage ~ \today
+French vocabulary \textcopyright 2020 Glen Newton
+Version: \today
 \end{mdframed}
 }
 
