Added link to git repo

--- a/gnfrench.tex
+++ b/gnfrench.tex
@@ -10,6 +10,7 @@
 \usepackage[t1]{sourcesanspro}
 \usepackage{multicol}
 \usepackage{wrapfig}
+\usepackage{hyperref}
 
 %%%%%%%%%%%Edit below to adjust print margins
 \usepackage[top=1mm,bottom=1mm,left=2mm,right=0mm]{geometry}
@@ -29,7 +30,7 @@
 
 \begin{document}
 %\footnotesize
-\small
+en\small
 \begin{multicols*}{5}
 
 \input{general}
