Fixed a couple of translations

--- a/subjonctif/sub_possibilite.tex
+++ b/subjonctif/sub_possibilite.tex
@@ -1,6 +1,6 @@
 
 \subsection*{Verbes de possibilité}
-\fr  {il arrive que} { }   {mmm}
+\fr  {il arrive que} { }   {it happens that}
 \fr  {il est possible que}{ }   {it is possible that}
 \fr  {il est probable que}{ }   {it is probable that}
 \fr  {il semble que}{ }   {it seems that}
