--- a/subjonctif/sub_volunte.tex
+++ b/subjonctif/sub_volunte.tex
@@ -12,5 +12,5 @@
 \fr  {preferer que}{}   {prefer that}
 \fr  {proposer que}{}   {propose that}
 \fr  {suggerer que}{}   {suggest that}
-\fr  {tenir à ce que}{}   {mmm}
+\fr  {tenir à ce que}{}   {to hold on to qqch}
 \fr  {être d'accord que}{}   {agree that}
