--- a/verbs.tex
+++ b/verbs.tex
@@ -19,7 +19,7 @@
 \fr  {enchaîner}{}   {to link}
 \fr  {engager}{}   {to hire/to commit/to take on}
 \fr  {exiger}{}   {to demand}
-\fr  {faire connaisance}{}   {mmm}
+\fr  {faire connaisance}{}   {to get to know}
 \fr  {favoriser}{}   {to favour}
 \fr  {fixer une reunion}{}   {to schedule a meeting}
 \fr  {franchir}{}   {to get through (an obstacle)}
