Added linking words

--- a/gnfrench.tex
+++ b/gnfrench.tex
@@ -13,7 +13,7 @@
 \usepackage{hyperref}
 
 %%%%%%%%%%%Edit below to adjust print margins
-\usepackage[top=1mm,bottom=1mm,left=2mm,right=0mm]{geometry}
+\usepackage[top=1mm,bottom=2mm,left=3mm,right=2mm]{geometry}
 %%%%%%%%%%%
 
 \usepackage[framemethod=tikz]{mdframed}
@@ -30,14 +30,15 @@
 
 \begin{document}
 %\footnotesize
-en\small
-\begin{multicols*}{5}
-
+\small
+\begin{multicols*}{4}
+\input{mot_liens}
 \input{general}
 \input{nouns}
 \input{verbs}
 \input{qualities}
 \input{subjonctif}
+
 
 \end{multicols*}
 \end{document}
