--- a/subjonctif/sub_necessite.tex
+++ b/subjonctif/sub_necessite.tex
@@ -1,5 +1,5 @@
 \subsection*{Verbes de nécessité}
-il est\ldots\\
+     {\bf {\em il est\ldots}}\\
 \fr  {\ldots essential que}{}   {it is essential that}
 \fr  {\ldots important que}{}   {it is important that}
 \fr  {\ldots nécessaire que}{}   {it is necessary that}
