--- a/subjonctif/sub_sentiment.tex
+++ b/subjonctif/sub_sentiment.tex
@@ -4,14 +4,13 @@
 \fr  {avoir la chance que}{}   {to have the chance that}
 \fr  {avoir peur que}{}   {to fear that}
 \fr  {craindre que}{}   {to fear that}
-
-être\ldots\\
+\fr  {regretter que}{}   {regret that}
+     {\bf {\em être\ldots}}\\
 \fr  {\ldots content que}{}   {to be happy that}
 \fr  {\ldots etonné que}{}   {to be surprised that}
 \fr  {\ldots heureux}{}   {to be happy that}
 \fr  {\ldots satisfait que}{}   {to be satisfied that}
 \fr  {\ldots triste que}{}   {to be sad that}
-\fr  {regretter que}{}   {regret that}
      {\bf {\em il est}\ldots}\\
      \fr  {\ldots absurde que}{}   {it is absurd that}
      \fr  {\ldots attristant que}{}   {it is sad that}
