--- a/def.tex
+++ b/def.tex
@@ -12,7 +12,7 @@ leftmargin=0mm,rightmargin=0mm,skipbelow=0mm,skipabove=0mm,
 \begin{mdframed}[style=header]
 \footnotesize
 \sffamily
-French vocabulary \textcopyright 2020 \href{https://github.com/gnewton/french-vocab-C-cheatsheet}{Glen Newton}\\
+French vocabulary \textcopyright 2020 \href{https://github.com/gnewton/french-vocab-C-cheatsheet}{Glen Newton}
 Version: \today
 \end{mdframed}
 }
