--- a/gnfrench.tex
+++ b/gnfrench.tex
@@ -13,7 +13,7 @@
 \usepackage{hyperref}
 
 %%%%%%%%%%%Edit below to adjust print margins
-\usepackage[top=1mm,bottom=2mm,left=3mm,right=2mm]{geometry}
+\usepackage[top=3mm,bottom=5mm,left=8mm,right=3mm]{geometry}
 %%%%%%%%%%%
 
 \usepackage[framemethod=tikz]{mdframed}
@@ -29,9 +29,9 @@
 %%%%%%%%%%%
 
 \begin{document}
-%\footnotesize
-\small
-\begin{multicols*}{4}
+\footnotesize
+%\small
+\begin{multicols*}{5}
 \input{mot_liens}
 \input{general}
 \input{nouns}
