--- a/mot_liens.tex
+++ b/mot_liens.tex
@@ -1,34 +1,41 @@
-\section{Mots liens}
-\subsection*{Cause}
+\section{Conjunctions}
+  {\sffamily\bfseries General}\\
+  \fr  {au cours de}{}   {during/process of}
+  \fr  {au lieu de}{}   {instead of}
+  \fr  {concernant}{}   {concerning/regarding}
+  \fr  {même si}{}   {even if}
+  \fr  {abord}{d'}   {at first}
+  \fr  {ailleurs}{d'}  {moreover}
+  \fr  {en outre}{}   {also}
+  \fr  {par contre}{}   {on the other hand}
+  \fr  {d’un part / d’autre part}{}   {on one hand / on the other hand}
+  \fr  {de toute façon}{}   {anyways}
+{\sffamily\bfseries Cause}\\
 \fr  {à cause de}{}   {because of}
-\fr  {car}{}   {because}
+\fr  {car, parce que}{}   {because}
 \fr  {étant donné que}{}   {given that}
 \fr  {grace à}{}   {thanks to}
-\fr  {parce que}{}   {because}
-\fr  {puisque}{}   {since}
-\fr  {vu que}{}   {since}
-\subsection*{But -- Objectif}
+\fr  {puisque, vu que}{}   {since}
+{\sffamily\bfseries But -- Objectif}\\
 \fr  {afin de}{}   {in order to}
 \fr  {afin que}{}   {so that}
 \fr  {dans le but de}{}   {in order to}
 \fr  {pour que}{}   {so that}
 \fr  {pour}{}   {for}
-\subsection*{Opposition - Concession}
+{\sffamily\bfseries Opposition - Concession}\\
 \fr  {au contraire}{}   {on the contrary}
 \fr  {bien que}{}   {although}
-\fr  {cependent}{}   {however}
+\fr  {cependent, néanmoins, toutfois}{}   {however}
+\fr  {en revanche, par contre}{}   {on the other hand}
 \fr  {mais}{}   {but}
 \fr  {malgre que}{}   {despite}
 \fr  {même si}{}   {even if}
-\fr  {par contre}{}   {on the other hand}
 \fr  {tandis que}{}   {while}
-\fr  {toutfois}{}   {however}
-\subsection*{Conseqance}
-\fr  {ainsi}{}   {so}
-\fr  {alors}{}   {so}
+{\sffamily\bfseries Consequance}\\
+\fr  {ainsi, alors}{}   {so}
 \fr  {c'est la raison pour laquelle}{}   {it is the reason}
 \fr  {ce que fait que}{}   {}
 \fr  {conséquence}{en}   {consequently}
-\fr  {conséquent}{par}   {therefor}
+\fr  {conséquent, donc}{par}   {therefor}
 \fr  {donc}{}   {therefor}
 
