--- a/nouns.tex
+++ b/nouns.tex
@@ -67,7 +67,7 @@
 \fr  {competance}{la}   {skill/ability}
 \fr  {consequence}{la}   {consequence}
 \fr  {convention collectif}{la}   {collective agreement}
-\fr  {date d'écheance}{la}   {expiry date}
+\fr  {date d'écheance}{la}   {due date}
 \fr  {détachment}{la}   {secondment}
 \fr  {ébouche}{l'}   {a draft}
 \fr  {êmpechement}{l'}   {an obstacle}
