--- a/verbs.tex
+++ b/verbs.tex
@@ -1,5 +1,5 @@
 \section{Verbs}
-\fr  {aborder}{}   {to approach}
+\fr  {aborder}{}   {to address, approach}
 \fr  {acquerir}{}   {to acquire}
 \fr  {adapter}{s'}   {to adapt}
 \fr  {assurer} {s'}   {to make sure}
@@ -18,12 +18,14 @@
 \fr  {empirer}{}   {to worsen}
 \fr  {enchaîner}{}   {to link}
 \fr  {engager}{}   {to hire/to commit/to take on}
+\fr  {équilibrer}{}   {to balance}
 \fr  {exiger}{}   {to demand}
 \fr  {faire connaisance}{}   {to get to know}
 \fr  {favoriser}{}   {to favour}
 \fr  {fixer une reunion}{}   {to schedule a meeting}
 \fr  {franchir}{}   {to get through (an obstacle)}
 \fr  {influencer}{}   {to influence}
+\fr  {inscrire}{s'}   {to subscribe}
 \fr  {limiter}{}   {to limit}
 \fr  {menacer}{}   {to threaten}
 \fr  {mentionner}{}   {to mention}
