--- a/mot_liens.tex
+++ b/mot_liens.tex
@@ -1,15 +1,16 @@
 \section{Conjunctions}
   {\sffamily\bfseries General}\\
-  \fr  {au cours de}{}   {during/process of}
-  \fr  {au lieu de}{}   {instead of}
-  \fr  {concernant}{}   {concerning/regarding}
-  \fr  {même si}{}   {even if}
   \fr  {abord}{d'}   {at first}
   \fr  {ailleurs}{d'}  {moreover}
-  \fr  {en outre}{}   {also}
-  \fr  {par contre}{}   {on the other hand}
-  \fr  {d’un part / d’autre part}{}   {on one hand / on the other hand}
-  \fr  {de toute façon}{}   {anyways}
+  \fr  {comme si}{}  {as if}
+  \fr  {concernant}{}   {concerning/regarding}
+  \fr  {contre}{par}   {on the other hand}
+  \fr  {cours de}{au}   {during/process of}
+  \fr  {lieu de}{au}   {instead of}
+  \fr  {même si}{}   {even if}
+  \fr  {outre}{en}   {in addition}
+  \fr  {part / d’autre part}{d'un}   {on one hand / on the other hand}
+  \fr  {toute façon}{de}   {anyways}
 {\sffamily\bfseries Cause}\\
 \fr  {à cause de}{}   {because of}
 \fr  {car, parce que}{}   {because}
@@ -25,8 +26,9 @@
 {\sffamily\bfseries Opposition - Concession}\\
 \fr  {au contraire}{}   {on the contrary}
 \fr  {bien que}{}   {although}
-\fr  {cependent, néanmoins, toutfois}{}   {however}
-\fr  {en revanche, par contre}{}   {on the other hand}
+\fr  {cependent, toutfois}{}   {however}
+\fr  {néanmoins}{}   {nevertheless}
+\fr  {revanche, par contre}{en}   {on the other hand}
 \fr  {mais}{}   {but}
 \fr  {malgre que}{}   {despite}
 \fr  {même si}{}   {even if}
