--- a/nouns.tex
+++ b/nouns.tex
@@ -7,14 +7,16 @@
 \fr  {échange}{un}   {an exchange}
 \fr  {echec}{un}   {a failure}
 \fr  {enjeu}{un}   {stake/issue/problem}
-\fr  {epuisement professionel}{un} {burnout}
+\fr  {épuisement professionel}{un} {burnout}
 \fr  {événement}{un}   {event}
 \fr  {exigence}{un}   {a demand}
 \fr  {indice}{un}   {sign/clue/indicator}
+\fr  {logement}{le}   {housing}
 \fr  {navigateur}{le}   {web browser}
 \fr  {programme}{un}   {program}
 \subsubsection*{Work words}
 \fr  {accomplissement}{l'}   {completion (of a task)}
+\fr  {avantage socieux}{l'}   {benefits (as in {\em pay and...}}
 \fr  {bias}{le}   {bias}
 \fr  {cheminement de carrière}{le}   {career path}
 \fr  {chiffrement}{le}   {encryption}
