--- a/qualities.tex
+++ b/qualities.tex
@@ -1,10 +1,27 @@
-\section{Qualities}
+\section{Adjectives}
+\fr  {ambiteaux(se)}{}   {ambitious}
+\fr  {analytique}{}   {analytical}
+\fr  {autonome}{}   {independent}
+\fr  {autoritaire}{}   {authoritarian}
+\fr  {conciliante(e)}{}   {conciliatory}
 \fr  {consciencieux}{}   {conscientious}
+\fr  {créatif(ve)}{}   {creative}
+\fr  {crucial(e)}{}   {crucial}
+\fr  {dynamique}{}   {dynamic}
+\fr  {essential(le)}{}   {essential}
 \fr  {exigeant}{}   {demanding}
 \fr  {fiable}{}   {reliable}
+\fr  {fundemantal}{}   {fundemantal}
+\fr  {honnête}{}   {honest}
 \fr  {intègre}{}   {to have integrity}
 \fr  {juste}{}   {fair}
+\fr  {motivè(e)}{}   {motivated}
 \fr  {organisé}{}   {organized}
-\fr  {ouverte}{}   {open-minded}
+\fr  {ouvert(e)}{}   {open-minded}
+\fr  {paresseux(se)}{}   {lazy}
+\fr  {prioritaire}{}   {priority}
 \fr  {respectueux}{}   {respectful}
+\fr  {serieux}{}   {serious}
 \fr  {sympathique}{}   {friendly}
+\fr  {tendu}{}   {tense}
+\fr  {tolerant(e)}{}   {tolerant}
