--- a/verbs.tex
+++ b/verbs.tex
@@ -1,109 +1,124 @@
 \section{Verbs}
-\fr  {aborder}{}   {to address, approach}
-\fr  {acquerir}{}   {to acquire}
-\fr  {adapter}{s'}   {to adapt}
-\fr  {assurer} {s'}   {to make sure}
-\fr  {assurer}{}   {to assure}
-\fr  {chiffrer}{}   {to encrypt}
-\fr  {clarifier}{}   {to clarify}
-\fr  {concentrer sur}{}   {to concentrate on/to focus on}
-\fr  {concevoir}{}   {to conceive}
-\fr  {conseiller}{}   {to council}
-\fr  {constater}{}   {to notice}
-\fr  {convaincre}{}   {to convince/to pursuade}
-\fr  {décrire}{}   {to describe}
-\fr  {démontrer}{}   {to prove/to demonstrate}
-\fr  {élaborer}{}   {to work out/to develop}
-\fr  {empecher}{}   {to prevent}
-\fr  {empirer}{}   {to worsen}
-\fr  {enchaîner}{}   {to link}
-\fr  {engager}{}   {to hire/to commit/to take on}
-\fr  {équilibrer}{}   {to balance}
-\fr  {exiger}{}   {to demand}
-\fr  {faire connaisance}{}   {to get to know}
-\fr  {favoriser}{}   {to favour}
-\fr  {fixer une reunion}{}   {to schedule a meeting}
-\fr  {franchir}{}   {to get through (an obstacle)}
-\fr  {influencer}{}   {to influence}
-\fr  {inscrire}{s'}   {to subscribe}
-\fr  {limiter}{}   {to limit}
-\fr  {menacer}{}   {to threaten}
-\fr  {mentionner}{}   {to mention}
-\fr  {mobiliser}{}   {to mobilise/to rally}
-\fr  {motiver}{}   {to motivate}
-\fr  {observer}{}   {to observe}
-\fr  {occuper}{s'}   {to be busy/to take care of something}
-\fr  {occuper (un poste)}{}   {occupy (a job)}
-\fr  {participer}{}   {to participate}
-\fr  {prioriser}{}   {to prioritize}
-\fr  {procurer}{se}   {to procure}
-\fr  {proposer}{}   {to proposer}
-\fr  {provoquer}{}   {to provoke}
-\fr  {rassembler}{}   {to collect/to gather}
-\fr  {rater}{}   {to fail}
-\fr  {réagir}{}   {to react}
-\fr  {recommander}{}   {recommender}
-\fr  {réconcilier}{}   {to reconcile}
-\fr  {redoubter}{}   {to doubt}
-\fr  {repenser}{}   {to revise}
-\fr  {reporter}{}   {to postpone}
-\fr  {resister}{}   {to resist}
-\fr  {ressember a}{}   {to resemble}
-\fr  {signaler}{}   {to point out}
-\fr  {subir}{}   {to put up with}
-\fr  {suggerer}{}   {suggest}
-\fr  {traiter}{}   {to process/to deal with}
-\subsection*{Expressions with {\em être}}
-\fr  {être à l’heure}{}   {to be on time}
-\fr  {être au courant}{}   {to be informed, aware}
-\fr  {être en enjeu}{}   {to be at stake}
-\fr  {être responsable de}{}   {to be responsible for}
-{\sffamily\bfseries Expressions with {\em avoir}}\\
-\fr  {air}{avoir l’}   {to appear to}
-\fr  {chance de}{avoir la}   {to be lucky to}
-\fr  {envie}{avoir}   {to feel like}
-\fr  {habitude de}{avoir l’}   {to be accustomed to}
-\fr  {intention de}{avoir l’}   {to intend to}
-\fr  {raison}{avoir}   {to be right}
-\fr  {tort}{avoir}   {to be wrong}
-{\sffamily\bfseries Expressions with {\em faire}}\\
-\fr  {attention à}{faire}   {to pay attention to}
-\fr  {avancer \small qqch}{faire}   {to something move forward}
-\fr  {confiance à quelqu’un}{faire}   {to trust someone}
-\fr  {face à}{faire}   {to oppose, face up to}
-\fr  {mieux}{faire de son}   {to do one’s best} 
-\fr  {partie de}{faire}   {to be a part of}
-\fr  {preuve de}{faire}   {to display a quality / virtue}
-\fr  {progrès}{faire des}   {to make progress}
-\fr  {résautage}{faire du}   {to network}
-\fr  {semblant de}{faire}   {to pretend to}
-\fr  {une question}{faire}   {to ask a question}
-{\sffamily\bfseries Expressions with {\em mettre}}\\
-\fr  {accent sûr}{mettre}   {to focus on}
-\fr  {colère}{mettre en}   {to make angry}
-\fr  {contact}{mettre en}   {to put in touch}
-\fr  {desordre}{mettre en}   {to mess up}
-\fr  {doute}{mettre en}   {to put in doubt}
-\fr  {essai}{mettre à l'}   {to put to the test}
-\fr  {evidence}{mettre en}   {to highlight}
-\fr  {fin à quelque chose}{mettre}   {to put an end to something}
-\fr  {jour}{mettre à}   {to update}
-\fr  {marche}{mettre en}   {to get something started}
-\fr  {norme}{mettre aux} {to update/upgrade to standards}
-\fr  {oeuvre}{mettre en}   {to implement}
-\fr  {pied}{mettre à}   {to layoff/to fire}
-\fr  {pied}{mettre sur}   {to organize}
-\fr  {point}{mettre au}   {to fine-tune / to adjust}
-\fr  {relief}{mettre en}   {to accentuate}
-\fr  {service}{mettre en}   {to put into service}
-\fr  {train}{mettre en}   {to get something underway}
-{\sffamily\bfseries Expressions with {\em prendre}}\\
-\fr  {décision}{prendre la}   {to make a decision}
-\fr  {fin}{prendre}   {to come to an end}
-\fr  {gants}{prendre des}   {to handle carefully}
-\fr  {garde}{prendre}   {to be careful}
-\fr  {gauche / droite}{prendre à}   {to turn left / right}
-\fr  {prendre à}{se}   {to start doing}
-\fr  {risques}{prendre des}   {to take chances}
-\fr  {sa retraite}{prendre}   {to retire (from work)}
-\fr  {sérieux}{prendre au}   {to take seriously}
+{\sffamily\bfseries Core}\\
+\frv  {aborder}{}   {to address, approach}
+\frv  {acquerir}{}   {to acquire}
+\frv  {adapter}{s'}   {to adapt}
+\frv  {assurer} {s'}   {to make sure}
+\frv  {clarifier}{}   {to clarify}
+\frv  {concentrer sur}{}   {to concentrate on/to focus on}
+\frv  {concevoir}{}   {to conceive}
+\frv  {conseiller}{}   {to council}
+\frv  {constater}{}   {to notice}
+\frv  {convaincre}{}   {to convince/to pursuade}
+\frv  {décrire}{}   {to describe}
+\frv  {démontrer}{}   {to prove/to demonstrate}
+\frv  {élaborer}{}   {to work out/to develop}
+\frv  {empecher}{}   {to prevent}
+\frv  {engager}{}   {to hire/to commit/to take on}
+\frv  {équilibrer}{}   {to balance}
+\frv  {exiger}{}   {to demand}
+\frv  {faire connaisance}{}   {to get to know}
+\frv  {franchir}{}   {to get through (an obstacle)}
+\frv  {influencer}{}   {to influence}
+\frv  {inscrire}{s'}   {to subscribe}
+\frv  {limiter}{}   {to limit}
+\frv  {suggerer}{}   {suggest}
+\frv  {fixer une reunion}{}   {to schedule a meeting}
+\frv  {mentionner}{}   {to mention}
+\frv  {mobiliser}{}   {to mobilise/to rally}
+\frv  {motiver}{}   {to motivate}
+\frv  {observer}{}   {to observe}
+\frv  {occuper}{s'}   {to be busy/to take care of something}
+\frv  {occuper (un poste)}{}   {occupy (a job)}
+\frv  {participer}{}   {to participate}
+\frv  {permettre}{}   {to allow}
+\frv  {prioriser}{}   {to prioritize}
+\frv  {proposer}{}   {to proposer}
+\frv  {rater}{}   {to fail}
+\frv  {réagir}{}   {to react}
+\frv  {recommander}{}   {to recommender}
+\frv  {reporter}{}   {to postpone}
+\frv  {resister}{}   {to resist}\newline
+{\sffamily\bfseries More...}\\
+\frv  {chiffrer}{}   {to encrypt}
+\frv  {empirer}{}   {to worsen}
+\frv  {enchaîner}{}   {to link}
+\frv  {favoriser}{}   {to favour}
+\frv  {menacer}{}   {to threaten}
+\frv  {procurer}{se}   {to procure}
+\frv  {provoquer}{}   {to provoke}
+\frv  {rassembler}{}   {to collect/to gather}
+\frv  {redoubter}{}   {to doubt}
+\frv  {rendre possible}{}   {to make possible}
+\frv  {repenser}{}   {to revise}
+\frv  {ressember a}{}   {to resemble}
+\frv  {réconcilier}{}   {to reconcile}
+\frv  {signaler}{}   {to point out}
+\frv  {subir}{}   {to put up with}
+\frv  {traiter}{}   {to process/to deal with}
+     {\sffamily\bfseries Expressions with {\em être}}\\
+     {\bf {\em être\ldots}}\\
+\frv  {à l’heure}{\ldots }   {to be on time}
+\frv  {au courant}{\ldots }   {to be informed, aware}
+\frv  {en enjeu}{\ldots }   {to be at stake}
+\frv  {responsable de}{\ldots }   {to be responsible for}
+     {\sffamily\bfseries Expressions with {\em avoir}}\\
+               {\bf {\em avoir\ldots}}\\
+\frv  {air}{\ldots l’}   {to appear to}
+\frv  {chance de}{\ldots la }   {to be lucky to}
+\frv  {envie}{\ldots }   {to feel like}
+\frv  {habitude de}{\ldots l’}   {to be accustomed to}
+\frv  {intention de}{\ldots l’}   {to intend to}
+\frv  {raison}{\ldots}   {to be right}
+\frv  {tendence}{\ldots}   {to tend to}
+\frv  {tort}{\ldots}   {to be wrong}
+     {\sffamily\bfseries Expressions with {\em faire}}\\
+          {\bf {\em faire\ldots}}\\
+\frv  {attention à}{\ldots }   {to pay attention to}
+\frv  {avancer \small qqch}{\ldots}   {to something move forward}
+\frv  {confiance à quelqu’un}{\ldots}   {to trust someone}
+\frv  {face à}{\ldots}   {to oppose, face up to}
+\frv  {mieux}{\ldots de son }   {to do one’s best} 
+\frv  {partie de}{\ldots}   {to be a part of}
+\frv  {preuve de}{\ldots}   {to display a quality / virtue}
+\frv  {progrès}{\ldots des }   {to make progress}
+\frv  {résautage}{\ldots du }   {to network}
+\frv  {semblant de}{\ldots}   {to pretend to}
+\frv  {une question}{\ldots}   {to ask a question}
+     {\sffamily\bfseries Expressions with {\em mettre}}\\
+               {\bf {\em mettre\ldots}}\\
+\frv  {accent sûr}{\ldots }   {to focus on}
+\frv  {colère}{\ldots en }   {to make angry}
+\frv  {contact}{\ldots en}   {to put in touch}
+\frv  {desordre}{\ldots en }   {to mess up}
+\frv  {doute}{\ldots en }   {to put in doubt}
+\frv  {essai}{\ldots à l'}   {to put to the test}
+\frv  {evidence}{\ldots en }   {to highlight}
+\frv  {fin à quelque chose}{\ldots }   {to put an end to something}
+\frv  {jour}{\ldots à }   {to update}
+\frv  {marche}{\ldots en }   {to get something started}
+\frv  {norme}{\ldots aux } {to update/upgrade to standards}
+\frv  {oeuvre}{\ldots en }   {to implement}
+\frv  {pied}{\ldots à }   {to layoff/to fire}
+\frv  {pied}{\ldots sur }   {to organize}
+\frv  {point}{\ldots au }   {to fine-tune / to adjust}
+\frv  {relief}{\ldots en }   {to accentuate}
+\frv  {service}{\ldots en }   {to put into service}
+\frv  {train}{\ldots en }   {to get something underway}
+     {\sffamily\bfseries Expressions with {\em prendre}}\\
+                    {\bf {\em prendre\ldots}}\\
+\frv  {décision}{\ldots  la }   {to make a decision}
+\frv  {fin}{\ldots}   {to come to an end}
+\frv  {gants}{\ldots  des }   {to handle carefully}
+\frv  {garde}{\ldots}   {to be careful}
+\frv  {gauche / droite}{\ldots  à }   {to turn left / right}
+\frv  {prendre à}{\ldots se }   {to start doing}
+\frv  {risques}{\ldots des }   {to take chances}
+\frv  {sa retraite}{\ldots}   {to retire (from work)}
+\frv  {sérieux}{\ldots  au }   {to take seriously}
+     {\sffamily\bfseries Expressions with {\em rendre}}\\
+                         {\bf {\em rendre\ldots}}\\
+     \frv  {visiter à}{\ldots}   {to visit (someone)}
+     \frv  {compte à}{\ldots se }   {to realize}
+     \frv  {evidence à}{\ldots se }   {to face facts}
+     \frv  {grâces à}{\ldots}    {to give thanks to}
