--- a/def.tex
+++ b/def.tex
@@ -3,19 +3,19 @@
 \renewcommand{\baselinestretch}{.99}
 \pagestyle{empty}
 
-\global\mdfdefinestyle{header}{%
-linecolor=gray,linewidth=1pt,%
-leftmargin=0mm,rightmargin=0mm,skipbelow=0mm,skipabove=0mm,
-}
+%% \global\mdfdefinestyle{header}{%
+%% linecolor=gray,linewidth=1pt,%
+%% leftmargin=0mm,rightmargin=0mm,skipbelow=0mm,skipabove=0mm,
+%% }
 
-\newcommand{\header}{
-\begin{mdframed}[style=header]
-\footnotesize
-\sffamily
-French vocabulary \textcopyright 2020 \href{https://github.com/gnewton/french-vocab-C-cheatsheet}{Glen Newton}
-Version: \today
-\end{mdframed}
-}
+%\newcommand{\header}{
+%\begin{mdframed}[style=header]
+%\footnotesize
+%\sffamily
+%French vocabulary \textcopyright 2020 \href{https://github.com/gnewton/french-vocab-C-cheatsheet}{Glen Newton}
+%Version: \today
+%\end{mdframed}
+%}
 
 \makeatletter % Author: https://tex.stackexchange.com/questions/218587/how-to-set-one-header-for-each-page-using-multicols
 \renewcommand{\section}{\@startsection{section}{1}{0mm}%
@@ -62,7 +62,7 @@ Version: \today
 %%%%% START CHANGE
 \ifnum\count@=\numexpr\mult@rightbox+2\relax
           \setbox\count@\vsplit\@cclv to \dimexpr \dimen@-1cm\relax
-\setbox\count@\vbox to \dimen@{\vbox to 1cm{\header}\unvbox\count@\vss}%
+%\setbox\count@\vbox to \dimen@{\vbox to 1cm{\header}\unvbox\count@\vss}%
 \else
       \setbox\count@\vsplit\@cclv to \dimen@
 \fi
